--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.8.3",
     "@openzeppelin/truffle-upgrades": "^1.18.0",
+    "@prisma/client": "^4.13.0",
     "@truffle/hdwallet-provider": "^2.1.10",
     "dotenv": "^16.0.3",
     "web3": "^1.9.0"
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "@openzeppelin/test-helpers": "^0.5.16",
-    "hardhat": "^2.14.0"
+    "hardhat": "^2.14.0",
+    "prisma": "^4.13.0"
   }
 }
